@@ -1099,6 +1099,8 @@ Release 0.19.0 - Unreleased
     HADOOP-4595. Fixes two race conditions - one to do with updating free slot count,
     and another to do with starting the MapEventsFetcher thread. (ddas)
 
+    HADOOP-4552. Fix a deadlock in RPC server. (Raghu Angadi) 
+
 Release 0.18.3 - Unreleased
 
   BUG FIXES
